# EdaxCluster

./: EdaxCluster.pyproj  EdaxCluster.sln  README.md  client2.py  pyproject.toml  run_client.py  run_sender.py  run_server.py  run_worker.py  sender.py  server.py  server2.py  simpleclient.py  simpleserv.py  worker.py
cluster/: abstract_protocols.py  client.py  protocols.py  server.py
cluster_test/: protocols_test.py
core/: __init__.py  field.py  game.py  game_file.py  game_score.py  game_score_file.py  moves.py  play.py  position.py  position_file.py  position_score.py  position_score_file.py  random_engine.py  solve_game_score.py
core_tests/: field_test.py  game_score_test.py  game_test.py  moves_test.py  position_score_test.py  position_test.py
edax/: __init__.py  engine.py  output.py
edax_tests/: engine_test.py  output_test.py
src/edax_cluster/: __init__.py  client.py  task.py  worker.py
tests/: test_dependencies.py  test_system.py  test_task.py  test_worker.py
workspread/: __init__.py  abstract_protocols.py  client.py  job.py  message.py  protocols.py  server.py
workspread/test/: protocols_test.py
